# decision-transformer

./: .gitmodules  README.md  annotated_transformer.py  experiment.py
decision-transformer/: pyproject.toml
decision-transformer/decision-transformer/: pyproject.toml  try.py
decision-transformer/decision-transformer/decision_transformer/: train.py  vanilla_transformer.py
decision-transformer/decision_transformer/: annotated_transformer.py  train.py  trans.py  vanilla_transformer.py
src/models/: decision_transformer.py
src/training/: seq_trainer.py
